--- a/index.html
+++ b/index.html
@@ -191,12 +191,13 @@
     button:hover{filter:brightness(1.07)}
 
     .toast{position:fixed;left:50%;bottom:80px;transform:translateX(-50%);background:rgba(17,24,39,.92);border:1px solid var(--line);padding:10px 12px;border-radius:12px;box-shadow:0 12px 24px rgba(0,0,0,.35);font-size:13px;display:none;z-index:9999}
-
     .mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace}
   </style>
 
+  <!-- jsPDF -->
   <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.5.31/dist/jspdf.plugin.autotable.min.js" crossorigin="anonymous"></script>
+  <!-- 캡처 기반 PDF -->
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="wrap">
@@ -314,7 +315,7 @@
                 <div class="muted">※ AI Hiring Assistant는 Recruiter 솔루션 옵션입니다.</div>
 
                 <div>
-                  <label class="labelDim">검색된 후보자 AI 평가 및 추천</label>
+                  <label class="labelDim">13억 가입자 중 AI검색 및 추천</label>
                   <input id="aiSearchCap" class="readonlyDim aiSmall" readonly />
                 </div>
 
@@ -440,64 +441,13 @@
     </div>
   </div>
 
+  <!-- PDF 렌더링용 숨김 영역 -->
+  <div id="pdfRender" style="position:fixed; left:-99999px; top:0; width:794px; background:#ffffff; color:#111827; padding:28px; font-family:'Noto Sans KR', Apple SD Gothic Neo, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;"></div>
+
   <script>
     const $ = (id) => document.getElementById(id) || {
       value: '', textContent: '', innerHTML: '', style: {}, addEventListener: () => {},
     };
-
-    // ✅ (중요) jsPDF 폰트가 "진짜 등록됐는지" 확인해서 없으면 반드시 addFont
-    const KOREAN_FONT_URL =
-      "https://cdn.jsdelivr.net/gh/google/fonts@main/ofl/notosanskr/NotoSansKR-Regular.ttf";
-    let __koreanFontB64 = null;
-    let __koreanFontLoading = null;
-
-    function __arrayBufferToBase64(buffer) {
-      const bytes = new Uint8Array(buffer);
-      let binary = "";
-      const chunk = 0x8000;
-      for (let i = 0; i < bytes.length; i += chunk) {
-        binary += String.fromCharCode.apply(null, bytes.subarray(i, i + chunk));
-      }
-      return btoa(binary);
-    }
-
-    function __hasFont(doc, family, style="normal") {
-      const list = doc.getFontList ? doc.getFontList() : {};
-      return !!(list && list[family] && list[family].includes(style));
-    }
-
-    async function ensureKoreanFont(doc) {
-      if (__hasFont(doc, "NotoSansKR", "normal")) {
-        doc.setFont("NotoSansKR", "normal");
-        return;
-      }
-
-      if (!__koreanFontLoading) {
-        __koreanFontLoading = fetch(KOREAN_FONT_URL, { mode: "cors" })
-          .then((r) => {
-            if (!r.ok) throw new Error("Font download failed");
-            return r.arrayBuffer();
-          })
-          .then((buf) => (__koreanFontB64 = __arrayBufferToBase64(buf)));
-      }
-
-      const b64 = __koreanFontB64 || await __koreanFontLoading;
-
-      // VFS 등록 → 폰트 등록 → 적용
-      doc.addFileToVFS("NotoSansKR-Regular.ttf", b64);
-      doc.addFont("NotoSansKR-Regular.ttf", "NotoSansKR", "normal");
-      doc.setFont("NotoSansKR", "normal");
-    }
-
-    // (선택) 페이지 로드 시 폰트 미리 받아두면 PDF 생성 시 더 안정적
-    (function preloadFont(){
-      if (!__koreanFontLoading) {
-        __koreanFontLoading = fetch(KOREAN_FONT_URL, { mode: "cors" })
-          .then((r) => r.arrayBuffer())
-          .then((buf) => (__koreanFontB64 = __arrayBufferToBase64(buf)))
-          .catch(()=>null);
-      }
-    })();
 
     const PRICES = {
       recruiter: 11350,
@@ -573,6 +523,7 @@
       return rows;
     };
 
+    // ✅ 표시 문구까지 변경 완료
     function updateAiNotes(aiTier){
       const sEl = document.getElementById('aiSearchCap');
       const aEl = document.getElementById('aiApplicantCap');
@@ -586,7 +537,7 @@
         return;
       }
 
-      sEl.value = `검색 후보자 ${nfmt(t.search)}명\nAI 평가/추천`;
+      sEl.value = `13억 가입자 중\nAI검색 및 추천 ${nfmt(t.search)}명`;
       aEl.value = `채용공고 지원자 중\n${nfmt(t.app)}명 추천`;
     }
 
@@ -630,94 +581,160 @@
       return { total, rows, aiTier };
     };
 
-    const makePdf = async () => {
+    function escapeHtml(s){
+      return String(s ?? '')
+        .replaceAll('&','&amp;')
+        .replaceAll('<','&lt;')
+        .replaceAll('>','&gt;')
+        .replaceAll('"','&quot;')
+        .replaceAll("'","&#039;");
+    }
+
+    function buildPdfHtml({ quoteNo, quoteDate, validUntil, companyName, contactName, contactEmail, rows, total, aiTier }){
+      const ai = PRICES.ai[aiTier] || PRICES.ai.none;
+
+      const rowsHtml = rows.map(r => {
+        const unit = (r.unit == null) ? '문의' : money(r.unit);
+        const qty  = (r.qty == null) ? '-' : nfmt(r.qty);
+        const amt  = (r.amount == null) ? '문의' : money(r.amount);
+        return `
+          <tr>
+            <td style="padding:10px 8px;border-bottom:1px solid #e5e7eb;">${escapeHtml(r.name)}</td>
+            <td style="padding:10px 8px;border-bottom:1px solid #e5e7eb;text-align:right;white-space:nowrap;">${escapeHtml(unit)}</td>
+            <td style="padding:10px 8px;border-bottom:1px solid #e5e7eb;text-align:right;white-space:nowrap;">${escapeHtml(qty)}</td>
+            <td style="padding:10px 8px;border-bottom:1px solid #e5e7eb;text-align:right;white-space:nowrap;">${escapeHtml(amt)}</td>
+          </tr>
+        `;
+      }).join('');
+
+      // ✅ PDF 표시 문구도 동일하게 변경 완료
+      const aiBlock = (aiTier === 'none') ? '' : `
+        <div style="margin-top:14px;padding:12px 12px;border:1px solid #bfdbfe;background:#eff6ff;border-radius:12px;">
+          <div style="display:flex;justify-content:space-between;gap:12px;align-items:center;">
+            <div style="font-weight:900;color:#1d4ed8;">AI Assistant 참고사항</div>
+            <div style="font-weight:800;color:#1e40af;">Recruiter 계약필수</div>
+          </div>
+          <div style="margin-top:8px;font-size:11px;color:#1f2937;line-height:1.4;">
+            • 13억 가입자 중 AI검색 및 추천 ${nfmt(ai.search)}명<br/>
+            • 채용공고 지원자 중 ${nfmt(ai.app)}명 추천
+          </div>
+        </div>
+      `;
+
+      return `
+        <div style="font-size:20px;font-weight:900;letter-spacing:-.2px;">견적서 (LinkedIn Solutions)</div>
+
+        <div style="display:flex;justify-content:space-between;gap:12px;margin-top:10px;font-size:12px;color:#111827;">
+          <div>
+            <div><b>견적번호</b>: ${escapeHtml(quoteNo)}</div>
+            <div style="margin-top:4px;"><b>유효기간</b>: ${escapeHtml(validUntil)} (20일)</div>
+            <div style="margin-top:4px;"><b>회사명</b>: ${escapeHtml(companyName)}</div>
+            <div style="margin-top:4px;"><b>담당자</b>: ${escapeHtml(contactName)}</div>
+            <div style="margin-top:4px;"><b>이메일</b>: ${escapeHtml(contactEmail)}</div>
+          </div>
+          <div style="text-align:right;">
+            <div><b>견적일자</b>: ${escapeHtml(quoteDate)}</div>
+            <div style="margin-top:4px;"><b>VAT</b>: 없음</div>
+            <div style="margin-top:4px;"><b>Currency</b>: USD</div>
+          </div>
+        </div>
+
+        <div style="margin-top:14px;border:1px solid #e5e7eb;border-radius:10px;overflow:hidden;">
+          <table style="width:100%;border-collapse:collapse;font-size:12px;">
+            <thead>
+              <tr style="background:#111827;color:#ffffff;">
+                <th style="padding:10px 8px;text-align:left;">항목</th>
+                <th style="padding:10px 8px;text-align:right;">단가(USD)</th>
+                <th style="padding:10px 8px;text-align:right;">수량</th>
+                <th style="padding:10px 8px;text-align:right;">금액(USD)</th>
+              </tr>
+            </thead>
+            <tbody>
+              ${rowsHtml}
+            </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="3" style="padding:10px 8px;text-align:right;font-weight:900;border-top:1px solid #e5e7eb;">합계</td>
+                <td style="padding:10px 8px;text-align:right;font-weight:900;border-top:1px solid #e5e7eb;">${escapeHtml(money(total))}</td>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+
+        ${aiBlock}
+
+        <div style="margin-top:14px;font-size:11px;color:#111827;line-height:1.5;">
+          • 견적서 유효기간 내 Linkedin Korea Partner로 문의 부탁드립니다.<br/>
+          • 전화 : 02-6405-4446 / E-mail : help@hrpoint.co.kr<br/>
+          • Life Page는 기업 규모에 따라 금액이 상이합니다. (문의필수)
+        </div>
+      `;
+    }
+
+    async function makePdf(){
       const { total, rows, aiTier } = recalc();
       if (!rows.length) { toast('수량/티어를 선택해 주세요.'); return; }
-
-      const companyName = $('companyName').value?.trim() || '-';
-      const contactName = $('contactName').value?.trim() || '-';
-      const contactEmail = $('contactEmail').value?.trim() || '-';
 
       const quoteNo = $('quoteNoInput').value || ensureQuoteNoOnce();
       const quoteDate = new Date().toISOString().slice(0,10);
       const validUntil = addDaysISO(quoteDate, 20);
 
+      const companyName  = $('companyName').value?.trim() || '-';
+      const contactName  = $('contactName').value?.trim() || '-';
+      const contactEmail = $('contactEmail').value?.trim() || '-';
+
+      const pdfEl = document.getElementById('pdfRender');
+      pdfEl.innerHTML = buildPdfHtml({ quoteNo, quoteDate, validUntil, companyName, contactName, contactEmail, rows, total, aiTier });
+
+      const canvas = await html2canvas(pdfEl, {
+        scale: 2,
+        useCORS: true,
+        backgroundColor: '#ffffff',
+      });
+
+      const imgData = canvas.toDataURL('image/png');
+
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF({ unit: 'pt', format: 'a4' });
 
-      // ✅ 폰트 “실제 등록”을 보장하고, 모든 출력 전에 적용
-      await ensureKoreanFont(doc);
+      const pageWidth = doc.internal.pageSize.getWidth();
+      const pageHeight = doc.internal.pageSize.getHeight();
+      const margin = 24;
 
-      const marginX = 40;
-      let y = 44;
+      const targetW = pageWidth - margin * 2;
+      const targetH = (canvas.height * targetW) / canvas.width;
 
-      doc.setFontSize(18);
-      doc.text('견적서 (LinkedIn Solutions)', marginX, y);
-      y += 22;
+      if (targetH <= pageHeight - margin * 2) {
+        doc.addImage(imgData, 'PNG', margin, margin, targetW, targetH);
+      } else {
+        const pageContentH = pageHeight - margin * 2;
+        const ratio = canvas.width / targetW;
+        const sliceHpx = Math.floor(pageContentH * ratio);
 
-      doc.setFontSize(10);
-      doc.text(`견적번호: ${quoteNo}`, marginX, y);
-      doc.text(`견적일자: ${quoteDate}`, 360, y);
-      y += 14;
+        let y = 0;
+        let page = 0;
 
-      doc.text(`유효기간: ${validUntil} (20일)`, marginX, y);
-      y += 14;
+        while (y < canvas.height) {
+          const sliceCanvas = document.createElement('canvas');
+          sliceCanvas.width = canvas.width;
+          sliceCanvas.height = Math.min(sliceHpx, canvas.height - y);
 
-      doc.text(`회사명: ${companyName}`, marginX, y);
-      y += 14;
-      doc.text(`담당자: ${contactName}`, marginX, y);
-      doc.text(`이메일: ${contactEmail}`, 360, y);
-      y += 16;
+          const ctx = sliceCanvas.getContext('2d');
+          ctx.drawImage(canvas, 0, y, canvas.width, sliceCanvas.height, 0, 0, canvas.width, sliceCanvas.height);
 
-      doc.text('VAT: 없음 · Currency: USD', marginX, y);
-      y += 16;
+          const sliceData = sliceCanvas.toDataURL('image/png');
+          const sliceHpt = (sliceCanvas.height * targetW) / sliceCanvas.width;
 
-      const body = rows.map(r => {
-        const unit = (r.unit == null) ? '문의' : money(r.unit);
-        const qty = (r.qty == null) ? '-' : String(r.qty);
-        const amt = (r.amount == null) ? '문의' : money(r.amount);
-        return [r.name, unit, qty, amt];
-      });
+          if (page > 0) doc.addPage();
+          doc.addImage(sliceData, 'PNG', margin, margin, targetW, sliceHpt);
 
-      doc.autoTable({
-        startY: y,
-        head: [[ '항목', '단가(USD)', '수량', '금액(USD)' ]],
-        body,
-        // ✅ autoTable도 폰트 강제 (핵심)
-        styles: { font: 'NotoSansKR', fontStyle: 'normal', fontSize: 9, cellPadding: 6 },
-        headStyles: { fillColor: [11, 18, 32], font: 'NotoSansKR', fontStyle: 'normal' },
-        columnStyles: { 1: { halign: 'right' }, 2: { halign: 'right' }, 3: { halign: 'right' } },
-        margin: { left: marginX, right: marginX },
-      });
-
-      let y2 = doc.lastAutoTable.finalY + 14;
-
-      if (aiTier !== 'none') {
-        const t = PRICES.ai[aiTier];
-        doc.setFontSize(10);
-        doc.text('AI Assistant 참고사항', marginX, y2);
-        y2 += 12;
-
-        doc.setFontSize(9);
-        doc.text(`- Recruiter 계약필수`, marginX, y2); y2 += 12;
-        doc.text(`- 검색 후보자 ${nfmt(t.search)}명 AI 평가/추천`, marginX, y2); y2 += 12;
-        doc.text(`- 채용공고 지원자 중 ${nfmt(t.app)}명 추천`, marginX, y2); y2 += 14;
+          y += sliceHpx;
+          page += 1;
+        }
       }
 
-      doc.setFontSize(12);
-      doc.text(`합계(USD): ${money(total)}`, 360, y2);
-
-      y2 += 18;
-      doc.setFontSize(9);
-      const lines = [
-        '• 견적서 유효기간 내 Linkedin Korea Partner로 문의 부탁드립니다.',
-        '• 전화 : 02-6405-4446 / E-mail : help@hrpoint.co.kr',
-        '• Life Page는 기업 규모에 따라 금액이 상이합니다. (문의필수)'
-      ];
-      doc.text(lines.join('\n'), marginX, y2);
-
       doc.save(`[Linkedin] 견적서_(Korea Partner_HR Point).pdf`);
-    };
+    }
 
     const copyLink = async () => {
       const p = new URLSearchParams({
@@ -782,6 +799,7 @@
       if (p.has('companyName')) document.getElementById('companyName').value = p.get('companyName');
       if (p.has('contactName')) document.getElementById('contactName').value = p.get('contactName');
       if (p.has('contactEmail')) document.getElementById('contactEmail').value = p.get('contactEmail');
+      if (p.has('quoteNo')) sessionStorage.setItem("lk_quote_no_v1", p.get('quoteNo'));
 
       if (p.has('qtyRecruiter')) document.getElementById('qtyRecruiter').value = p.get('qtyRecruiter');
       if (p.has('aiTier')) document.getElementById('aiTier').value = p.get('aiTier');
