--- a/index.html
+++ b/index.html
@@ -420,7 +420,10 @@
               <b>기업용 솔루션 문의</b><br/>
               LinkedIn Korea Partner<br/>
               전화 : 02-6405-4446<br/>
-              E-mail : help@hrpoint.co.kr
+              E-mail : help@hrpoint.co.kr<br/>
+              <div style="margin-top:8px;font-size:11px;line-height:1.45;opacity:.95">
+                할인적용대상 : 그룹사 할인, 볼륨할인, 다년계약 할인 적용가능
+              </div>
             </div>
           </div>
         </div>
@@ -523,7 +526,6 @@
       return rows;
     };
 
-    // ✅ 표시 문구까지 변경 완료
     function updateAiNotes(aiTier){
       const sEl = document.getElementById('aiSearchCap');
       const aEl = document.getElementById('aiApplicantCap');
@@ -607,7 +609,6 @@
         `;
       }).join('');
 
-      // ✅ PDF 표시 문구도 동일하게 변경 완료
       const aiBlock = (aiTier === 'none') ? '' : `
         <div style="margin-top:14px;padding:12px 12px;border:1px solid #bfdbfe;background:#eff6ff;border-radius:12px;">
           <div style="display:flex;justify-content:space-between;gap:12px;align-items:center;">
@@ -622,9 +623,10 @@
       `;
 
       return `
-        <div style="font-size:20px;font-weight:900;letter-spacing:-.2px;">견적서 (LinkedIn Solutions)</div>
+        <!-- ✅ 제목 크게 -->
+        <div style="font-size:28px;font-weight:900;letter-spacing:-.3px;line-height:1.1;">견적서 (LinkedIn Solutions)</div>
 
-        <div style="display:flex;justify-content:space-between;gap:12px;margin-top:10px;font-size:12px;color:#111827;">
+        <div style="display:flex;justify-content:space-between;gap:12px;margin-top:12px;font-size:12px;color:#111827;">
           <div>
             <div><b>견적번호</b>: ${escapeHtml(quoteNo)}</div>
             <div style="margin-top:4px;"><b>유효기간</b>: ${escapeHtml(validUntil)} (20일)</div>
@@ -639,7 +641,7 @@
           </div>
         </div>
 
-        <div style="margin-top:14px;border:1px solid #e5e7eb;border-radius:10px;overflow:hidden;">
+        <div style="margin-top:16px;border:1px solid #e5e7eb;border-radius:10px;overflow:hidden;">
           <table style="width:100%;border-collapse:collapse;font-size:12px;">
             <thead>
               <tr style="background:#111827;color:#ffffff;">
@@ -663,10 +665,13 @@
 
         ${aiBlock}
 
-        <div style="margin-top:14px;font-size:11px;color:#111827;line-height:1.5;">
+        <div style="margin-top:14px;font-size:11px;color:#111827;line-height:1.55;">
           • 견적서 유효기간 내 Linkedin Korea Partner로 문의 부탁드립니다.<br/>
           • 전화 : 02-6405-4446 / E-mail : help@hrpoint.co.kr<br/>
-          • Life Page는 기업 규모에 따라 금액이 상이합니다. (문의필수)
+          • Life Page는 기업 규모에 따라 금액이 상이합니다. (문의필수)<br/>
+          <div style="margin-top:8px;">
+            할인적용대상 : 그룹사 할인, 볼륨할인, 다년계약 할인 적용가능
+          </div>
         </div>
       `;
     }
@@ -731,6 +736,15 @@
           y += sliceHpx;
           page += 1;
         }
+      }
+
+      // ✅ PDF 맨 하단 가운데 고정 문구 (모든 페이지)
+      const footerText = "Linkedin Korea Partner_HR Point";
+      const totalPages = doc.getNumberOfPages();
+      doc.setFontSize(9);
+      for (let i = 1; i <= totalPages; i++) {
+        doc.setPage(i);
+        doc.text(footerText, pageWidth / 2, pageHeight - 12, { align: 'center' });
       }
 
       doc.save(`[Linkedin] 견적서_(Korea Partner_HR Point).pdf`);
