--- a/index.html
+++ b/index.html
@@ -773,4 +773,111 @@
 
       // ✅ PDF 맨 하단: 중앙 텍스트 + 우측 HR 로고
       const footerText = "Linkedin Korea Partner_HR Point";
-      const totalPages
+      const totalPages = doc.getNumberOfPages();
+      doc.setFontSize(9);
+
+      const logoW = 26; // pt
+      const logoH = 26; // pt
+      const logoX = pageWidth - margin - logoW;
+      const logoY = pageHeight - 10 - logoH; // 바닥에서 10pt 띄움
+      const textY = pageHeight - 12;
+
+      for (let i = 1; i <= totalPages; i++) {
+        doc.setPage(i);
+        doc.text(footerText, pageWidth / 2, textY, { align: 'center' });
+        doc.addImage(HR_LOGO_DATA, 'PNG', logoX, logoY, logoW, logoH);
+      }
+
+      doc.save(`[Linkedin] 견적서_(Korea Partner_HR Point).pdf`);
+    }
+
+    const copyLink = async () => {
+      const p = new URLSearchParams({
+        qtyRecruiter: $('qtyRecruiter').value || '0',
+        aiTier: $('aiTier').value || 'none',
+        qtyJob: $('qtyJob').value || '0',
+        lifeInclude: $('lifeInclude').value || 'no',
+        qtyLTI: $('qtyLTI').value || '0',
+        companyName: $('companyName').value || '',
+        contactName: $('contactName').value || '',
+        contactEmail: $('contactEmail').value || '',
+        quoteNo: $('quoteNoInput').value || '',
+      });
+      const url = `${location.origin}${location.pathname}?${p.toString()}`;
+
+      try{
+        await navigator.clipboard.writeText(url);
+        toast('입력값 링크가 복사되었습니다.');
+      }catch(e){
+        const ta = document.createElement('textarea');
+        ta.value = url;
+        document.body.appendChild(ta);
+        ta.select();
+        document.execCommand('copy');
+        document.body.removeChild(ta);
+        toast('입력값 링크가 복사되었습니다.');
+      }
+    };
+
+    const resetAll = () => {
+      sessionStorage.removeItem("lk_quote_no_v1");
+
+      $('companyName').value='';
+      $('contactName').value='';
+      $('contactEmail').value='';
+
+      $('qtyRecruiter').value='0';
+      $('aiTier').value='none';
+      $('qtyJob').value='0';
+      $('lifeInclude').value='no';
+      $('qtyLTI').value='0';
+
+      history.replaceState({}, '', location.pathname);
+      ensureQuoteNoOnce();
+      recalc();
+      toast('초기화 완료');
+    };
+
+    document.getElementById('btnPdf')?.addEventListener('click', async (e)=>{e.preventDefault(); await makePdf();});
+    document.getElementById('btnCopyLink')?.addEventListener('click', (e)=>{e.preventDefault(); copyLink();});
+    document.getElementById('btnReset')?.addEventListener('click', (e)=>{e.preventDefault(); resetAll();});
+
+    ['companyName','contactName','contactEmail','qtyRecruiter','aiTier','qtyJob','lifeInclude','qtyLTI'].forEach(id=>{
+      const el = document.getElementById(id);
+      if (!el) return;
+      el.addEventListener('input', ()=>recalc());
+      el.addEventListener('change', ()=>recalc());
+    });
+
+    (function applyStateFromLink(){
+      const p = new URLSearchParams(location.search);
+      if (p.has('companyName')) document.getElementById('companyName').value = p.get('companyName');
+      if (p.has('contactName')) document.getElementById('contactName').value = p.get('contactName');
+      if (p.has('contactEmail')) document.getElementById('contactEmail').value = p.get('contactEmail');
+      if (p.has('quoteNo')) sessionStorage.setItem("lk_quote_no_v1", p.get('quoteNo'));
+
+      if (p.has('qtyRecruiter')) document.getElementById('qtyRecruiter').value = p.get('qtyRecruiter');
+      if (p.has('aiTier')) document.getElementById('aiTier').value = p.get('aiTier');
+      if (p.has('qtyJob')) document.getElementById('qtyJob').value = p.get('qtyJob');
+      if (p.has('lifeInclude')) document.getElementById('lifeInclude').value = p.get('lifeInclude');
+      if (p.has('qtyLTI')) document.getElementById('qtyLTI').value = p.get('qtyLTI');
+    })();
+
+    ensureQuoteNoOnce();
+    recalc();
+  </script>
+
+  <!--
+    ⭐ 중요 (꼭 확인)
+    지금 코드에서 LI_LOGO_DATA는 메시지 크기 제한 때문에 "축약된 base64"가 들어가 있습니다.
+    아래 방법 중 하나로 반드시 교체해야 합니다.
+
+    (추천) 1) 링크드인 로고 파일을 같은 폴더에 두고:
+       const LI_LOGO_DATA = "LI-Logo.png";  // 또는 ./LI-Logo.png
+       그리고 <img src="LI-Logo.png">로 쓰도록 바꾸기 (CORS 문제 없음)
+
+    또는 2) base64를 전체로 넣기:
+       const LI_LOGO_DATA = "data:image/png;base64,....(전체)...";
+  -->
+</body>
+</html>
