--- a/index.html
+++ b/index.html
@@ -411,11 +411,6 @@
             </tfoot>
           </table>
 
-          <div id="minNotice" style="margin-top:10px;font-size:12px;font-weight:700;color:#f87171;display:none;line-height:1.5">
-            기업용 솔루션은 최소 합계금액이 $10,000 부터 계약이 가능합니다.<br/>
-            구체적인 문의는 Linkedin Korea Partner로 연락주세요.
-          </div>
-
           <div class="foot" style="margin-top:12px">
             <div class="callout" style="margin-top:0;border-color:rgba(52,211,153,.35);background:rgba(52,211,153,.10);color:#d1fae5">
               <b>기업용 솔루션 문의</b><br/>
@@ -450,6 +445,8 @@
   <div id="pdfRender" style="position:fixed; left:-99999px; top:0; width:794px; background:#ffffff; color:#111827; padding:28px; font-family:'Noto Sans KR', Apple SD Gothic Neo, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;"></div>
 
   <script>
+    const SHEET_WEBAPP_URL = "https://script.google.com/macros/s/AKfycbzkMNsjpaWkdBqVPKwK7ZVCMMs4ZDLy9CnSTtl_bRxWYz5axpm4n9epjrpxyTATGuKcHQ/exec";
+
     const $ = (id) => document.getElementById(id) || {
       value: '', textContent: '', innerHTML: '', style: {}, addEventListener: () => {},
     };
@@ -481,7 +478,7 @@
       t.textContent = msg;
       t.style.display = 'block';
       clearTimeout(window.__toastTimer);
-      window.__toastTimer = setTimeout(()=>{t.style.display='none';}, 1600);
+      window.__toastTimer = setTimeout(()=>{t.style.display='none';}, 1800);
     };
 
     const yyyymmdd = (d=new Date()) => {
@@ -520,11 +517,11 @@
 
     const buildRows = (state) => {
       const rows = [];
-      if (state.qtyRecruiter > 0) rows.push({ name:'Recruiter (인재검색)', unit:PRICES.recruiter, qty:state.qtyRecruiter, amount:state.amtRecruiter });
-      if (state.qtyJob > 0) rows.push({ name:'Job Slot (채용공고)', unit:PRICES.job, qty:state.qtyJob, amount:state.amtJob });
-      if (state.aiTier !== 'none') rows.push({ name:`AI Hiring Assistant (${PRICES.ai[state.aiTier].label})`, unit:PRICES.ai[state.aiTier].price, qty:1, amount:state.amtAI });
-      if (state.lifeInclude === 'yes') rows.push({ name:'Life Page (기업브랜딩/광고) — 문의 필수', unit:null, qty:null, amount:null });
-      if (state.qtyLTI > 0) rows.push({ name:'LTI (경쟁사 분석)', unit:PRICES.lti, qty:state.qtyLTI, amount:state.amtLTI });
+      if (state.qtyRecruiter > 0) rows.push({ key:'Recruiter', name:'Recruiter (인재검색)', unit:PRICES.recruiter, qty:state.qtyRecruiter, amount:state.amtRecruiter });
+      if (state.qtyJob > 0) rows.push({ key:'Job Slot', name:'Job Slot (채용공고)', unit:PRICES.job, qty:state.qtyJob, amount:state.amtJob });
+      if (state.aiTier !== 'none') rows.push({ key:'AI Hiring Assistant', name:`AI Hiring Assistant (${PRICES.ai[state.aiTier].label})`, unit:PRICES.ai[state.aiTier].price, qty:1, amount:state.amtAI, tier: state.aiTier });
+      if (state.lifeInclude === 'yes') rows.push({ key:'Life Page', name:'Life Page (기업브랜딩/광고) — 문의 필수', unit:null, qty:null, amount:null });
+      if (state.qtyLTI > 0) rows.push({ key:'LTI', name:'LTI (경쟁사 분석)', unit:PRICES.lti, qty:state.qtyLTI, amount:state.amtLTI });
       return rows;
     };
 
@@ -690,6 +687,44 @@
       return `${y}${m}${day}_${hh}${mm}`;
     }
 
+    function selectionSummary(rows){
+      // 시트에 적재하기 쉬운 문자열 요약
+      // 예) Recruiter x2; Job Slot x1; AI Tier2; Life Page; LTI x1
+      return rows.map(r => {
+        if (r.key === 'AI Hiring Assistant') return `AI(${r.tier || ''}) x1`;
+        if (r.qty == null) return `${r.key}`;
+        return `${r.key} x${r.qty}`;
+      }).join('; ');
+    }
+
+    async function saveToGoogleSheet(payload){
+      // Apps Script WebApp이 JSON POST를 받는다고 가정
+      // (CORS가 막혀있으면 no-cors로라도 요청은 나갑니다. 응답 확인은 불가)
+      try{
+        const res = await fetch(SHEET_WEBAPP_URL, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(payload),
+        });
+        // 응답이 JSON이 아닐 수도 있어 안전 처리
+        try { await res.text(); } catch (e) {}
+        return true;
+      } catch (e) {
+        // no-cors fallback (응답 확인 불가)
+        try{
+          await fetch(SHEET_WEBAPP_URL, {
+            method: 'POST',
+            mode: 'no-cors',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(payload),
+          });
+          return true;
+        }catch(_){
+          return false;
+        }
+      }
+    }
+
     async function makePdf(){
       const { total, rows, aiTier } = recalc();
       if (!rows.length) { toast('수량/티어를 선택해 주세요.'); return; }
@@ -702,8 +737,39 @@
       const contactName  = $('contactName').value?.trim() || '-';
       const contactEmail = $('contactEmail').value?.trim() || '-';
 
+      // ✅ 1) 다운로드 시 고객정보/선택항목 저장 (구글시트)
+      const payload = {
+        savedAt: new Date().toISOString(),
+        quoteNo,
+        companyName,
+        contactName,
+        contactEmail,
+        currency: "USD",
+        totalUSD: Math.round(total || 0),
+        selectedCount: rows.length,
+        selectedSummary: selectionSummary(rows),
+        selectedItems: rows.map(r => ({
+          key: r.key,
+          name: r.name,
+          qty: r.qty,
+          unitUSD: r.unit,
+          amountUSD: r.amount,
+          tier: r.tier || null
+        }))
+      };
+
+      const saved = await saveToGoogleSheet(payload);
+      if (!saved) {
+        toast('시트 저장에 실패했지만 PDF는 다운로드합니다.');
+      }
+
+      // ✅ 2) PDF 렌더링(캡처)
       const pdfEl = document.getElementById('pdfRender');
-      pdfEl.innerHTML = buildPdfHtml({ quoteNo, quoteDate, validUntil, companyName, contactName, contactEmail, rows, total, aiTier });
+      pdfEl.innerHTML = buildPdfHtml({
+        quoteNo, quoteDate, validUntil,
+        companyName, contactName, contactEmail,
+        rows, total, aiTier
+      });
 
       const canvas = await html2canvas(pdfEl, {
         scale: 2,
@@ -752,17 +818,20 @@
         }
       }
 
-      // ✅ PDF 하단 문구 크게 (모든 페이지)
+      // ✅ 3) PDF 하단 텍스트 크게 + Arial 요청: jsPDF 기본은 Arial이 없어 Helvetica(유사) 사용
       const footerText = "Linkedin Korea Partner_HR Point";
       const totalPages = doc.getNumberOfPages();
-      doc.setFontSize(14); // <-- 크게
+
+      // Arial 대신 helvetica (가장 유사한 기본 폰트)
+      doc.setFont('helvetica', 'normal');
+      doc.setFontSize(16); // 더 크게
 
       for (let i = 1; i <= totalPages; i++) {
         doc.setPage(i);
         doc.text(footerText, pageWidth / 2, pageHeight - 14, { align: 'center' });
       }
 
-      // ✅ 파일명 뒤에 다운로드 날짜/시간 추가
+      // ✅ 4) 파일명에 다운로드 날짜/시간 추가
       const base = `[Linkedin] 견적서_(Korea Partner_HR Point)`;
       const filename = `${base}_${downloadStamp()}.pdf`;
       doc.save(filename);
